Fix for overflow and sizing causing the iframe in the host page to not fit within it's containing item
Embed script working as expected with iframe size

--- a/Heimdallr/wwwroot/css/site.css
+++ b/Heimdallr/wwwroot/css/site.css
@@ -47,8 +47,10 @@ p {
 
 h1 {
     background: #4e4e4e !important;
-    padding:5px;
+    font-size: 18px;
     display: block;
+    padding:2px;
+    margin:0;
 }
 
 h4 {
@@ -67,13 +69,11 @@ h6 {
 }
 
 body {
-
     margin: 0 !important;
     padding: 0 !important;
+    background: #fff !important;
     background: #222 !important;
     color: #ffffff !important;
     font-family: 'Open Sans', sans-serif !important;
     font-weight: 100 !important;
 }
-
-
